--- a/assets/frontend.css
+++ b/assets/frontend.css
@@ -1072,7 +1072,8 @@
   text-transform: uppercase;
 }
 
-.kpi-year-selector select {
+.kpi-year-selector select,
+#kpiFyStartSelect {
   appearance: none;
   -webkit-appearance: none;
   width: 120px;
@@ -1103,6 +1104,7 @@
   border-color: rgba(102, 240, 194, 0.55);
   box-shadow: 0 0 0 3px rgba(102, 240, 194, 0.14);
   background-color: rgba(255, 255, 255, 0.06);
+  color: #fff;
 }
 
 .kpi-year-selector select option {
